# widgets

./: .gitignore  README.md  README.rst  meson.build  meson_options.txt  pytest.ini  requirements.txt  test_sample_value.py
.github/workflows/: ci-mac.yml
python/: meson.build
python/tests/: test_widgets_imports.py
python/tests/widgets/: test_echogram_distance_format.py  test_wciviewer.py
python/themachinethatgoesping/widgets/: __init__.py  combinedviewer_core.py  combinedviewer_jupyter.py  combinedviewer_qt.py  control_jupyter.py  control_qt.py  control_spec.py  echogramviewer.py  echogramviewer_core.py  echogramviewer_jupyter.py  echogramviewer_pyqtgraph2.py  echogramviewer_qt.py  mapviewer_core.py  mapviewer_jupyter.py  mapviewer_pyqtgraph.py  mapviewer_qt.py  pyqtgraph_helpers.py  tqdmwidget.py  videoframes.py  wciviewer.py  wciviewer_core.py  wciviewer_jupyter.py  wciviewer_pyqtgraph2.py  wciviewer_qt.py
python/themachinethatgoesping/widgets/tools/: __init__.py  interactivelinebuilder.py
subprojects/: .gitignore  echosounders.wrap  meta.wrap  pingprocessing.wrap  tools.wrap
unittest_data/background_maps/: test_latlon.tiff  test_utm.tiff
